objects/ssot__PatientMedicalProcedureDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeId__c</fullName>
        <label>Detail Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeObject__c</fullName>
        <label>Detail Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordId__c</fullName>
        <label>Detail Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordObject__c</fullName>
        <label>Detail Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailType__c</fullName>
        <label>Detail Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medical Procedure Detail Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicalProcedureId__c</fullName>
        <label>Patient Medical Procedure</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725640126_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedureDetail_Patien_rel</label>
        <referenceTo>ssot__PatientMedicalProcedure__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedureDetail_Patien_rel</relationshipLabel>
        <relationshipName>rel_1716725640126_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725641254_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedureDetail_Detail_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedureDetail_Detail_rel</relationshipLabel>
        <relationshipName>rel_1716725641254_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725642484_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicalProcedureDetail_Detail_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicalProcedureDetail_Detail_rel</relationshipLabel>
        <relationshipName>rel_1716725642484_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>